test/error/scoping.dck
%-

(:def a
  "a")

(:def main
  (:let
    [a a]
      "${a}"))
